// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Error> renders with isLoading=fasle 1`] = `
<div
  className="error"
>
  <div
    className="text-center"
  >
    <h4>
      An error occured
    </h4>
    <p>
      This Chart can't be shown. Click the reload button to try again.
    </p>
    <button
      aria-label="Reloadbutton for reloading Chartdatas"
      className="error__button"
      disabled={false}
      onClick={[Function]}
    >
      <span>
        Reload
      </span>
      <span
        className="reload-icon"
      >
        ↻
      </span>
    </button>
  </div>
</div>
`;

exports[`<Error> renders with isLoading=true  1`] = `
<div
  className="error"
>
  <div
    className="text-center"
  >
    <h4>
      An error occured
    </h4>
    <p>
      This Chart can't be shown. Click the reload button to try again.
    </p>
    <button
      aria-label="Reloadbutton for reloading Chartdatas"
      className="error__button"
      disabled={true}
      onClick={[Function]}
    >
      <span>
        Loading 
      </span>
      <span
        className="reload-icon spin"
      >
        ↻
      </span>
    </button>
  </div>
</div>
`;
